--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.2.1",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "handy-svg": "^1.0.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
